ports/stm32/err.log
pyb_i2c.c:184:2: error: #error "no I2C timings for this MCU"
 #error "no I2C timings for this MCU"
  ^~~~~
make: *** [build-STM32F3DISC/genhdr/qstr.i.last] Error 1
make: *** Deleting file 'build-STM32F3DISC/genhdr/qstr.i.last'
